Efmub-Ogy/src/objects/Case_Contact__c.object
<CustomObject>
    <description>Represents an additional Contact related to a Case.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Relationships</relationshipLabel>
        <relationshipName>Case_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <inlineHelpText>The Case to which the Contact is related.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsRepresentative__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the Contact is a non-compensable representative.</inlineHelpText>
        <label>Representative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship of the contacts associated to a case</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traveler</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Family member</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL-{00000000}</displayFormat>
        <label>Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>